--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body,html{
     flex-direction: column;
 }
 
-h1 {
+.heading >h1 {
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 text-align: center; 
 font-size: 7em;
@@ -179,10 +179,58 @@ width: 100vw;
 background-color: rgb(29, 29, 29);
 /* margin-bottom: 40px;  */
 padding: 50px 20px;
+display: flex;
+flex-direction: column;
+}
+#section2 .heading1{
+    margin-left: 5rem;
+    margin-right: 3rem;
+    /* padding: 0rem 5rem 0rem 5rem ; */
+    max-width: 100%;
+    height: 30vh;
+    /* background-color: red; */
+    position: relative;
+    border-bottom: 1px solid #D0D0C6;
+    display: flex;
 }
 
+#section2 .heading1>.left{
+    width: 50%;
+    height: 100%;
+
+    /* background-color: green; */
+}
+
+#section2 .heading1>.right{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    width: 50%;
+    height: 100%;
+    /* background-color: red; */
+    padding-bottom: 1rem;
+}
+#section2 .heading1>.right>h3{
+    color: #D0D0C6;
+    width: 70%;
+    font-size: 1.7vw;
+    letter-spacing: -0.01rem;
+}
+
+#section2>.heading1>.left>h1{
+    color: #D0D0C6;
+    font-size: 4.5em;
+    letter-spacing: -0.3rem;
+    white-space: nowrap;
+}
+
+#section2>.heading1>.left>h1>span{
+    font-weight: 700;
+}
 /* profile card */
 .cards{
+    width: 100vw;
+    height: 90%;
 position: relative;
 display: flex;
 flex-direction: row;
@@ -786,7 +834,6 @@ color: white !important;
     }
 }
 
-
 @media (max-width: 480px) {
     .section1{
         height: 170vh; 
@@ -796,7 +843,7 @@ color: white !important;
         height: 20vh;
         margin:0;
     }
-    h1 {
+    .heading>h1 {
         font-size: 5em;
         letter-spacing: 2rem;
         top: 50%;
@@ -804,7 +851,7 @@ color: white !important;
         transform: translate(-50%, -50%);
     }
 
-    h2 {
+    .heading>h2 {
     font-size: 3rem;
     left: 53%;
     }
@@ -843,6 +890,42 @@ color: white !important;
         align-items: center;
         height: 100%;
         width: 100%;
+    }
+
+    #section2{
+        padding: 0;
+    }
+    #section2>.heading1{
+        height: 40%;
+        margin: 2rem 1.3rem 1rem 1.3rem;
+        /* padding: 0rem 1rem 2rem 1rem; */
+        flex-wrap: wrap;
+        flex-direction: column;
+        
+    }
+
+    #section2>.heading1>.left{
+        width: 100%;
+        height: 50%;
+        align-items: center;
+        justify-content: start;
+        /* padding: 10px; */
+    }
+    #section2>.heading1>.left>h1{
+        width: 100%;
+        height: 100%;
+        font-size:3rem;
+        letter-spacing: -0.2rem;
+    }
+    #section2>.heading1>.right{
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        height: 50%;
+    }
+    #section2>.heading1>.right>h3{
+        font-size:1.2rem;
+        letter-spacing: -0.01rem;
     }
 
     .footerBottom {
